# SanctuaryOS

./: .gitignore  Citizen Guide.md  README.md  Sanctuary OS Forking & Architecture Guide.md  changelog.md  package-lock.json  package.json  schema.sql  schema_os.sql
.agents/workflows/: git.md  lexicon3.md
.github/workflows/: release.yml
sanctuary-os/: fixZ.cjs  index.html  lexicon_migration.sql  package-lock.json  package.json  patch.cjs  resize.ps1  vite.config.ts
sanctuary-os/scratch/: test.cjs
sanctuary-os/src/: App.css  App.tsx  AppModals.tsx  ArchitectConflictMatrix.tsx  ArchitectHomesteadDiagnostics.tsx  ArchitectHub.tsx  ArchitectMasonQueue.tsx  ArchitectSupportTickets.tsx  ArchitectTemplateOversight.tsx  AssetPreviewSidebar.tsx  AuthWrapper.tsx  BlueprintArchitect.tsx  BlueprintMatrix.tsx  BlueprintSwapSidePanel.tsx  Blueprints.tsx  CCManager.tsx  Cards.tsx  CartographerSetup.tsx  CitizenTickets.tsx  CitizenTicketsSidePanel.tsx  CitizensWorkbench.tsx  CodeSnippetSidebar.tsx  Collection.tsx  (+83 more)
sanctuary-os/src-tauri/: 2  Cargo.toml  sanctuary_config.json  tauri.conf.json
sanctuary-os/src-tauri/capabilities/: default.json  fs-all.json
sanctuary-os/src-tauri/icons/: icon.icns
sanctuary-os/src-tauri/refactor_tool/: Cargo.toml
sanctuary-os/src-tauri/src/: dbpf.rs  game_logic.rs  main.rs  parser.rs  schema.rs  state.rs  telemetry.rs  utils.rs  watchers.rs
sanctuary-os/src-tauri/src/commands/: backups.rs  cache.rs  config.rs  deployment.rs  game_info.rs  library.rs  logs.rs  mod.rs  overrides.rs  radar.rs  shelter.rs  state_ops.rs  system.rs
(+128 files in other folders)
