[package]
name = "sanctuary-os"
version = "0.4.30"
description = "Sanctuary OS"
authors = ["Sanctuary OS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"  # 
tauri-plugin-fs = "2" # 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = "1.5.0"
dirs = "5.0"
zstd = { version = "0.13", features = ["zstdmt"] }
tar = "0.4"
uuid = { version = "1.7", features = ["v4"] }
notify = "6.1.1"
blake3 = "1.8.4"
md5 = "0.8.0"
rayon = "1.10"
hex = "0.4.3"
flate2 = "1.1.9"
murmur2 = "0.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.11.0"
filetime = "0.2.27"
tauri-plugin-process = "2"
zip = "8.6.0"
machine-uid = "0.6.0"
walkdir = "2.5.0"
chrono = "0.4.45"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


